--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+</head>
+
+<body>
+
+    <body>
+
+        <div id="landingPage">
+            <h1>Code Quiz</h1>
+            <p>
+                Instructions Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Similique perferendis aperiam minima vitae sint. Consequuntur inventore
+                nostrum, illum odit, totam rem aliquid neque nisi voluptate fugit tempore
+                ullam! Nisi, nesciunt?
+            </p>
+            <button id="startBtn">Start Quiz</button>
+        </div>
+        <div id="ques1" class="hide">
+            <h2>hello</h2>
+            <div id="btnwrap">
+                <!-- <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
+                <button id="4">4</button> -->
+            </div>
+
+        </div>
+        <!-- <div id="ques2" class="hide">
+            <h2>Question 2 goes here ???</h2>
+            <div>
+                <button id="Choice1">choice a</button>
+                <button id="Choice2">choice b</button>
+                <button id="Choice3">choice c</button>
+                <button id="Choise4">choice d</button>
+            </div>
+
+        </div>
+        <div id="ques3" class="hide">
+            <h2>Question 3 goes here ???</h2>
+            <div>
+                <button id="Choice1">choice a</button>
+                <button id="Choice2">choice b</button>
+                <button id="Choice3">choice c</button>
+                <button id="Choise4">choice d</button>
+            </div>
+
+        </div>
+        <div id="ques4" class="hide">
+            <h2>Question 4 goes here ???</h2>
+            <div>
+                <button id="Choice1">choice a</button>
+                <button id="Choice2">choice b</button>
+                <button id="Choice3">choice c</button>
+                <button id="Choise4">choice d</button>
+            </div>
+
+        </div> -->
+        <div>
+            <h3 id="CorrectAns" class="hide">Correct</h3>
+            <h3 id="WrongAns" class="hide">Wrong</h3>
+        </div>
+        <script src="./script.js"></script>
+
+    </body>
+
+</html>
