--- a/index.html
+++ b/index.html
@@ -10,47 +10,54 @@
 
 <html>
 
+
 <body>
-    <button id="highBtn">highscores</button>
-    <div id="highscores" class="hide">
-        
-        <button id="back">Go Back</button>
-    </div>
 
-    <div id="landingPage">
+    <nav>
+        <button id="highBtn">highscores</button>
 
-        <h1>Code Quiz</h1>
-        <p>
-            Instructions Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Similique perferendis aperiam minima vitae sint. Consequuntur inventore
-            nostrum, illum odit, totam rem aliquid neque nisi voluptate fugit tempore
-            ullam! Nisi, nesciunt?
-        </p>
-        <button id="startBtn">Start Quiz</button>
+    </nav>
+    <main>
+        <div id="highscores" class="hide">
+            <h1>Highscores</h1>
 
-    </div>
-    <div id="ques1" class="hide">
-        <h2></h2>
-        <div id="btnwrap"></div>
-        <div id="result">
-            <h3 id="CorrectAns"></h3>
-            <h3 id="WrongAns"></h3>
+            <button id="back">Go Back</button>
+            <button id ="clear">Clear Highscores</button>
         </div>
-    </div>
-    <div id="finalPg" class="hide">
-        <h1>All Done!</h1>
-        <p>Your final score is <span id="score"></span>.</p>
-        <p>
-          Enter initials: <input type="text" id="initials" max="3" />
-          <button id="submit">Submit</button>
-        </p>
-    </div>
+        <div id="landingPage">
+
+            <h1>Code Quiz</h1>
+            <p>
+                This is a 4 question quiz that goes over subjects that was covered in 
+                class from week 1 - week 4. Each question is 25 pts. Once finished 
+                you are allowed to take it again. 
+
+            </p>
+            <button id="startBtn">Start Quiz</button>
+
+        </div>
+        <div id="ques1" class="hide">
+            <h2></h2>
+            <div id="btnwrap"></div>
+            <div id="result">
+                <h3 id="CorrectAns"></h3>
+                <h3 id="WrongAns"></h3>
+            </div>
+        </div>
+        <div id="finalPg" class="hide">
+            <h1>All Done!</h1>
+            <p>Your final score is <span id="score"></span>.</p>
+            <p>
+                Enter initials: <input type="text" id="initials" max="3" />
+                <button id="submit">Submit</button>
+            </p>
+        </div>
 
 
-    </div>
+        </div>
 
-    <script src="./script.js"></script>
-
+        <script src="./script.js"></script>
+    </main>
 </body>
 
 </html>
